bug fixes:wrong div id, modals removing scrollbars, clear appended data off share modal success

--- a/public/css/event.css
+++ b/public/css/event.css
@@ -53,3 +53,7 @@ a:hover {
   text-align: left;
   vertical-align: middle;
 }
+
+.modal-open {
+    overflow: scroll;
+}
